# DSS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Coding Guidelines.md  CurrentVersion.txt  Debug.props  DeepSkyStacker.VS2017.sln  DeepSkyStacker.VS2019.sln  DeepSkyStacker.VS2022.sln  INSTALL.md  LICENSE  README.md  RelWithDebInfo.props  Release.props  Setup Linux.txt  Setup MacOS.txt  Setup WSL.txt  build.ps1  dssbase.h  vcpkg-configuration.json  vcpkg.json  vcpkg.props
CFitsIO/: CFitsIO.sln  CFitsIO.vcproj  CFitsIO.vcproj.vspscc  CFitsIO.vcxproj  CFitsIO.vcxproj.filters  CMakeLists.txt  License.txt  Makefile.in  README  README.MacOS  README.win32  ReadMe.txt  buffers.c  cfileio.c  cfitsio.doc  cfitsio.pc.in  cfitsio.ps  cfitsio.tex  cfitsio.toc  cfortran.doc  changes.txt  compress.c  compress.h  compress_alternate.c  configure  configure.in  cookbook.c  drvrfile.c  drvrmem.c  drvrnet.c  editcol.c  edithdu.c  eval.l  eval.y  eval_defs.h  eval_f.c  eval_l.c  eval_tab.h  eval_y.c  f77_wrap.h  (+78 more)
DeepSkyStacker/: AHDDemosaicing.cpp  AHDDemosaicing.h  About.cpp  About.h  AlignmentParameters.cpp  AlignmentParameters.h  AskRegistering.cpp  AskRegistering.h  BackgroundCalibration.cpp  BackgroundCalibration.h  BackgroundLoading.cpp  BackgroundLoading.h  BackgroundOptions.cpp  BackgroundOptions.h  BaseDialog.cpp  BaseDialog.h  BatchStacking.cpp  BatchStacking.h  Bayer.cpp  Bayer.h  BezierAdjust.h  BilinearParameters.cpp  BilinearParameters.h  BitMapFiller.cpp  BitMapFiller.h  BitmapBase.cpp  BitmapBase.h  BitmapExt.cpp  BitmapExt.h  BitmapInfo.cpp  BitmapInfo.h  BitmapIterator.h  BitmapPartFile.h  CFABitmapInfo.h  CMakeLists.txt  Calibration.pspimage  CalibrationInterpolation.pspimage  ChannelAlign.cpp  ChannelAlign.h  CheckAbove.cpp  (+355 more)
DeepSkyStacker/Buttons/: AllButtons.pspimage  vssver2.scc
DeepSkyStacker/Icon/: DSSLive-2.icns  DSSLive-3.icns  DSSLive.icns  DSS_filelist.icns  DeepSkyStacker.icns  Icone+DSS.pspimage  Icone.ai  Icone.pspimage  ImageList.pspimage  Logo.pspimage
DeepSkyStacker/i18n/: DSS.ca.ts  DSS.ca_ES.ts  DSS.cs.ts  DSS.cs_CZ.ts  DSS.de.ts  DSS.de_DE.ts  DSS.en.ts  DSS.en_GB.ts  DSS.es.ts  DSS.fr.ts  (+47 more)
DeepSkyStackerCL/: CMakeLists.txt  DeepSkyStackerCL.cpp  DeepSkyStackerCL.h  DeepSkyStackerCL.vcproj  DeepSkyStackerCL.vcproj.vspscc  DeepSkyStackerCL.vcxproj  DeepSkyStackerCL.vcxproj.filters  ProgressConsole.h  QtProgressConsole.cpp  QtProgressConsole.h  ReadMe.txt  Version.aps  Version.rc  mssccprj.scc  pch.cpp  pch.h  progressconsole.cpp  progressconsole.h  stdafx.cpp  stdafx.h  vssver2.scc
DeepSkyStackerKernel/: AHDDemosaicing.cpp  AHDDemosaicing.h  BackgroundCalibration.cpp  BackgroundCalibration.h  Bayer.cpp  Bayer.h  BezierAdjust.h  BilinearParameters.cpp  BilinearParameters.h  BitMapFiller.cpp  BitMapFiller.h  BitmapBase.cpp  BitmapBase.h  BitmapCharacteristics.h  BitmapExt.cpp  BitmapExt.h  BitmapExtraInfo.h  BitmapInfo.cpp  BitmapInfo.h  BitmapIterator.h  BitmapPartFile.h  CFABitmapInfo.h  CMakeLists.txt  ChannelAlign.cpp  ChannelAlign.h  ColorBitmap.cpp  ColorBitmap.h  ColorHelpers.cpp  ColorHelpers.h  ColorMultiBitmap.cpp  ColorMultiBitmap.h  ColorRef.h  CosmeticEngine.cpp  CosmeticEngine.h  DSSCommon.h  DSSProgress.cpp  DSSProgress.h  DSSTools.cpp  DSSTools.h  DSSVersion.h  (+142 more)
DeepSkyStackerLive/: CMakeLists.txt  ChartTab.cpp  ChartTab.h  DSSDefault.mo  DSSDefault.po  DSSLiveCzech.po  DSSLiveFrench.po  DSSLiveItalian.mo  DSSLiveItalian.po  DeepSkyStackerLive.aps  DeepSkyStackerLive.cpp  DeepSkyStackerLive.desktop  DeepSkyStackerLive.h  DeepSkyStackerLive.rc  DeepSkyStackerLive.rc.1033  DeepSkyStackerLive.vcproj  DeepSkyStackerLive.vcproj.vspscc  DeepSkyStackerLive.vcxproj  DeepSkyStackerLive.vcxproj.filters  DeepSkyStackerLiveCAT.aps  DeepSkyStackerLiveCAT.rc  DeepSkyStackerLiveCAT.rc.1027  DeepSkyStackerLiveCN.rc  DeepSkyStackerLiveCN.rc.1028  DeepSkyStackerLiveCZ.rc  DeepSkyStackerLiveCZ.rc.1029  DeepSkyStackerLiveDE.rc  DeepSkyStackerLiveDE.rc.1031  DeepSkyStackerLiveDlg.cpp  DeepSkyStackerLiveDlg.h  DeepSkyStackerLiveES.rc  DeepSkyStackerLiveES.rc.3082  DeepSkyStackerLiveFR.aps  DeepSkyStackerLiveFR.rc  DeepSkyStackerLiveFR.rc.1036  DeepSkyStackerLiveGE.rc  DeepSkyStackerLiveGE.rc.1031  DeepSkyStackerLiveGeneric.rc  DeepSkyStackerLiveGeneric.rc.0  DeepSkyStackerLiveIT.rc  (+63 more)
DeepSkyStackerTest/: AvxAccumulateTest.cpp  AvxAccumulateTest.h  AvxBitmapFillerTest.cpp  AvxCfaTest.cpp  AvxEntropyTest.cpp  AvxEntropyTest.h  AvxHistogramTest.cpp  AvxStackingTest.cpp  BitMapFillerTest.cpp  CMakeLists.txt  DeepSkyStackerTest.cpp  DeepSkyStackerTest.vcxproj  DeepSkyStackerTest.vcxproj.filters  DssRectTest.cpp  OpenMpTest.cpp  PixelIteratorTest.cpp  QtTests.cpp  RegisterTest.cpp  SkyBackGroupTest.cpp  SkyBackgroundTest.cpp  TimeStampTest.cpp  catch.h  catch_amalgamated.cpp  catch_amalgamated.hpp  pch.h  stdafx.h
LibTiff/: CMakeLists.txt  Makefile.in  Release Debug Infolibtiffv8.bsc  Resource.h  StdAfx.h  getopt.c  libtiff.dsw  libtiff.plg  libtiff.vcxproj  libtiff.vcxproj.filters  libtiffd.lib  libtiffv8.dsp  libtiffv8.vcproj  libtiffv8.vcproj.vspscc  libtiffv8.vcxproj  libtiffv8.vcxproj.filters  mkspans.c  mkversion.c  mssccprj.scc  release debug info.idb  tif_config.h  tif_config.h.in  tif_dirread.c  tif_jbig.c  tif_unix.c  tif_vms.c  tif_win32.c  tif_zip.c  tiff2pdf.dsp  tiff2pdf.dsw  tiff2pdf.h  tiffconf.h  tiffio.h  tiffiop.h  tiffvers.h  vssver2.scc
ZCLass/: CMakeLists.txt  ZCLass.vcxproj  ZCLass.vcxproj.filters  Ztrace.h  zdefs.h  zexcbase.h  zexcept.h  zmstrlck.h  zptr.h  zreslock.h  zsingle.h
ZClass/: CMakeLists.txt  ZClass.vcxproj  ZClass.vcxproj.filters  zexcbase.h  zexcept.h  zinttimr.h  zmstrlck.h  zptr.h  zreslock.h  zsingle.h  ztrace.h
lcms/: COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README.1ST  aclocal.m4  configure  configure.ac  filter.c  install.gcc  lcms.pc.in  ltmain.sh  makefile.simple
libjpg/: CMakeLists.txt  jmemmgr.c  jpeglib.h  libjpg.vcproj  libjpg.vcxproj  libjpg.vcxproj.filters
qwt-6.3.0/: CMakeLists.txt  qwt-6.3.0.vcxproj  qwt-6.3.0.vcxproj.filters  qwt_series_data.h
(+1290 files in other folders)
